# sparty-in-a-box

./: Animation335.anim  README.md
CanadianExperienceLib/: Actor.cpp  Actor.h  CMakeLists.txt  Crank.cpp  Crank.h  HaroldFactory.cpp  MachineDrawable.cpp  MachineDrawable.h  MainFrame.cpp  Picture.cpp  PictureFactory.cpp  ThorHammerFactory.cpp  ThorHammerFactory.h
MachineLib/: Box.cpp  Box.h  CMakeLists.txt  Cam.cpp  Cam.h  Component.cpp  Component.h  Crank.cpp  Crank.h  IActivate.h  Machine.cpp  Machine.h  MachineCFactory.cpp  MachineCFactory.h  MachineFactory2.cpp  MachineFactory2.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  Polygon.h  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shaft.cpp  Shaft.h  Sparty.cpp  Sparty.h
html/: _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _anim_channel_8cpp.html  _anim_channel_8h.html  _anim_channel_8h_source.html  _anim_channel_angle_8cpp.html  _anim_channel_angle_8h.html  _anim_channel_angle_8h_source.html  _anim_channel_point_8cpp.html  _anim_channel_point_8h.html  _anim_channel_point_8h_source.html  _box_8cpp.html  _box_8cpp.js  _box_8h.html  _box_8h_source.html  _cam_8cpp.html  _cam_8h.html  _cam_8h.js  _cam_8h_source.html  _canadian_experience_app_8cpp.html  _canadian_experience_app_8h.html  _canadian_experience_app_8h_source.html  _canadian_experience_lib_2_crank_8cpp.html  _canadian_experience_lib_2_crank_8h.html  _canadian_experience_lib_2_crank_8h.js  _canadian_experience_lib_2_crank_8h_source.html  _component_8cpp.html  _component_8h.html  (+314 more)
(+48 files in other folders)
